--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta name="keywords" content="seo, google, site web, site internet, agence design paris">
 	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png">
+	<link rel="shortcut icon" type="image/png" href="img/favicon.webp">
 
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
 
@@ -32,7 +32,7 @@
 					<div  class="navbar-header">
 
 						<a class="navbar-brand" href="index.html">
-							<img src="img/la-chouette-agence.png" alt="La chouette agence" height="40" />
+							<img src="img/la-chouette-agence.webp" alt="La chouette agence" height="40" />
 						</a>
 
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -72,7 +72,7 @@
 
 					<div class="col-sm-12">
 
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Le chouette logo" />
+						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Le chouette logo" />
 						<h1 tabindex="0" class="text-center hero-bloc-text tc-white title_bellow_paper ">
 							La chouette agence
 						</h1>
@@ -188,8 +188,8 @@
 				<div class="row tight-width-whitespace portfolio-row">
 
 					<figure class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-							<img src="img/1.jpg" alt="Refonte du site web d'un journal" class="img-responsive portfolio-thumb" />
+						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+							<img src="img/1.webp" alt="Refonte du site web d'un journal" class="img-responsive portfolio-thumb" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -202,8 +202,8 @@
 					</figure>
 
 					<figure class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-							<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
+						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+							<img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -220,8 +220,8 @@
 
 					<figure class="col-sm-6">
 
-						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-							<img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
+						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+							<img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/>
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -235,8 +235,8 @@
 					</figure>
 					<figure class="col-sm-6">
 
-						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-							<img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
+						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+							<img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" />
 						</a>
 						<figcaption tabindex="0">
 							<h3 class="mg-md text-center">
@@ -349,6 +349,7 @@
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
+	
 
 </body>
 </html>
