--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
 
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css" async/>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" async />
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" async/>
-	<link rel="stylesheet" type="text/css" href="./css/style.css" async/>
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css" defer/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" defer />
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" defer/>
+	<link rel="stylesheet" type="text/css" href="./css/style.css" defer/>
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
 
@@ -308,6 +308,33 @@
 									<a href="index.html" aria-label="Instagram"><span class="fab fa-instagram icon-md" title="instagram"></span></a>
 								</div>
 							</div>
+						</nav>
+						<nav class="row container bloc-md-12 bloc-sm-4 text-justify" aria-label="Footer navigation">
+
+							<div class="col-md-4 col-md-offset-3 col-offset-2">
+								<h3 class="caption">Annuaires Agence</h3>
+								<ul>
+									<li><a href="annuaireagence.com" title="annuaire agence">annuaireagence.com</a></li>
+									<li><a href="annuairemarketing.com" title="annuaire marketing">annuairemarketing.com</a></li>
+									<li><a href="123site.com" title="123 site">123site.com</a></li>
+									<li><a href="annuairewordpress.com" title="annuaire wordpress">annuairewordpress.com</a></li>
+									<li><a href="listeagence.com" title="liste agence">listeagence.com</a></li>
+								</ul>
+							</div>
+							<div class="col-md-4">
+								<h3 class="caption">Annuaires SEO</h3>
+								<ul>
+									<li><a href="listeseo.com" title="liste seo">listeseo.com</a></li>
+									<li><a href="123seoture.com" title="123 seo">123seo.com</a></li>
+									<li><a href="betterseo.com" title="better seo">betterseo.com</a></li>
+									<li><a href="annuaireseo.com" title="annuaire seo">annuaireseo.com</a></li>
+									<li><a href="ameliorerseo.com" title="ameliorerseo">ameliorerseo.com</a></li>
+									<li><a href="seojuicelien.com" title="">seojuicelien.com</a></li>
+									<li><a href="remontersurgoogle.com" title="">remontersurgoogle.com</a></li>
+									<li><a href="vraiseofiable.com" title="">vraiseofiable.com</a></li>
+								</ul>
+							</div>
+
 						</nav>
 					</div>
 				</div>
