--- a/contact_agence_web_design.html
+++ b/contact_agence_web_design.html
@@ -53,7 +53,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="#">Contact</a>
+								<a href="#bloc-8">Réseaux</a>
 							</li>
 						</ul>
 
@@ -125,54 +125,56 @@
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
-			<span class="fa fa-chevron-up">
 
-			</span></a>
-			<!-- ScrollToTop Button END-->
+		<!-- ScrollToTop Button END-->
 
 
-			<!-- Footer - bloc-8 -->
-			<footer class="bloc bgc-atomic-tangerine d-bloc align-items-around" id="bloc-8">
-				<div class="container bloc-sm-12">
-					<div class="row">
-						<div class="col-md-12">
+		<!-- Footer - bloc-8 -->
+		<footer class="bloc bgc-atomic-tangerine d-bloc align-items-around" id="bloc-8">
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+				<span class="fa fa-chevron-up">
 
-							<p class="text-center">
-								La chouette agence - Agence web basée à Lyon.<br>
-							</p>
+				</span>
+			</a>
+			<div class="container bloc-sm-12">
+				<div class="row">
+					<div class="col-md-12">
 
-							<nav class="row row-no-gutters social container" aria-label="Social navigation">
+						<p class="text-center">
+							La chouette agence - Agence web basée à Lyon.<br>
+						</p>
 
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a href="index.html" aria-label="Twitter"><span class="fab fa-twitter icon-md"></span></a>
-									</div>
+						<nav class="row row-no-gutters social container" aria-label="Social navigation">
+
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a href="index.html" aria-label="Twitter"><span class="fab fa-twitter icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a href="index.html" aria-label="Facebook"><span class="fab fa-facebook icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a href="index.html" aria-label="Facebook"><span class="fab fa-facebook icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a href="index.html" aria-label="Dribbble"><span class="fab fa-dribbble icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a href="index.html" aria-label="Dribbble"><span class="fab fa-dribbble icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a href="index.html" aria-label="Instagram"><span class="fab fa-instagram icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a href="index.html" aria-label="Instagram"><span class="fab fa-instagram icon-md"></span></a>
 								</div>
-							</nav>
-						</div>
+							</div>
+						</nav>
 					</div>
 				</div>
-			</footer>
-			<!-- Footer - bloc-8 END -->
+			</div>
+		</footer>
+		<!-- Footer - bloc-8 END -->
 
-		</main>
-		<!-- Principal conteneur END -->
+	</main>
+	<!-- Principal conteneur END -->
 
 	
 	<script src="./js/jquery-2.1.0.js"></script>
@@ -181,5 +183,5 @@
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/formHandler.js"></script>
-	</body>
-	</html>
+</body>
+</html>
