--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a tabindex="0" href="#">Accueil</a>
+								<a tabindex="0" href="#bloc-4-portfolio">Portfolio</a>
 							</li>
 							<li>
-								<a tabindex="0" href="contact_agence_web_design.html">Contact</a>
+								<a tabindex="0" href="#bloc-8">Réseaux</a>
 							</li>
 						</ul>
 
@@ -278,6 +278,11 @@
 
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc align-items-around" id="bloc-8">
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+				<span class="fa fa-chevron-up">
+
+				</span>
+			</a>
 			<div class="container bloc-sm-12">
 				<div class="row">
 					<div class="col-md-12">
