--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" manifest="cache_manifest">
 <head>
 	<meta charset="utf-8"/>
 	<meta name="author" content="La chouette agence"/>
 	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web"/>
-	<meta http-equiv="Cache-Control" content="max-age=600"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
 
