--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<meta name="description" content="Agence web design basée a Lyon. Création de site web et réferencement web"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.webp"/>
+	
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"/>
+	<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css" defer/>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" defer />
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" defer/>
-	<link rel="stylesheet" type="text/css" href="./css/style.css" defer/>
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 
 	<title>La chouette agence - Agence web design basée à Lyon</title>
 
